--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
             <version>5.9.1</version>
             <scope>test</scope>
         </dependency>
+        
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version> <!-- La versión puede variar, asegúrate de usar una versión compatible -->
+        </dependency>
+
     </dependencies>
 
     <build>
