--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.8</version> <!-- La versión puede variar, asegúrate de usar una versión compatible -->
+            <version>2.8.9</version>
         </dependency>
 
     </dependencies>
