--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,9 @@
         <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
 
+    <resource-ref>
+        <description>BBDD para almacenar usuarios y vinos</description>
+        <res-ref-name>jdbc/vinos</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth> </resource-ref>
 </web-app>
